[package]
name = "nscript_lib"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false

[dependencies]
encoding_rs = "0.8"
hex = "0.4"
colored = "2.0.0"
rand = "0.8.4"
chrono = "0.4.23"
base64 = "0.22.1"
cgmath = "0.18.0"
crossterm = "0.27.0"
qrcode = "0.14.1"
image = "0.25.8"
fs_extra = "1.2.0"
[target.'cfg(unix)'.dependencies]
termion = "3.0.0"
